@@ -2,11 +2,11 @@
 package com.keenwrite.util;
 
 import java.io.File;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 
-import static com.keenwrite.util.ProtocolScheme.UNKNOWN;
+import static com.keenwrite.util.ProtocolScheme.HTTP;
+import static com.keenwrite.util.ProtocolScheme.valueFrom;
 
 /**
  * Responsible for determining the protocol of a resource.
@@ -20,35 +20,17 @@ public class ProtocolResolver {
    */
   public static ProtocolScheme getProtocol( final String resource ) {
     try {
-      final URI uri = new URI( resource );
-      return ProtocolScheme.valueFrom(
-          uri.isAbsolute()
-              ? uri.getScheme()
-              : new URL( resource ).getProtocol()
-      );
+      final var uri = new URI( resource );
+      return uri.isAbsolute()
+          ? valueFrom( uri )
+          : valueFrom( new URL( resource ) );
     } catch( final Exception e ) {
       // Using double-slashes is a short-hand to instruct the browser to
       // reference a resource using the parent URL's security model. This
       // is known as a protocol-relative URL.
       return resource.startsWith( "//" )
-          ? ProtocolScheme.HTTP
-          : getProtocol( new File( resource ) );
-    }
-  }
-
-  /**
-   * Returns the protocol for a given file.
-   *
-   * @param file Determine the protocol for this file.
-   * @return The protocol for the given file, or {@link ProtocolScheme#UNKNOWN}
-   * if the protocol cannot be determined.
-   */
-  private static ProtocolScheme getProtocol( final File file ) {
-    try {
-      return ProtocolScheme.valueFrom( file.toURI().toURL().getProtocol() );
-    } catch( final MalformedURLException ex ) {
-      // Return a protocol guaranteed to be undefined.
-      return UNKNOWN;
+          ? HTTP
+          : valueFrom( new File( resource ) );
     }
   }
 }
